# ShapeShifter

./: .clang-format  .clang-tidy  CMakeLists.txt  cmake_setup.sh
doc/: Doxyfile
hooks/: pre-commit
shaders/fragment/: BasicFragmentShader.frag
shaders/vertex/: BasicVertexShader.vert
src/: main.cpp
src/data/: AbstractBufferManager.cpp  AbstractBufferManager.h  AbstractBufferTypes.cpp  AbstractBufferTypes.h  BufferMap.h  BufferMapBase.cpp  BufferMapBase.h  BufferSliceMap.cpp  BufferSliceMap.h  BufferTypes.cpp  BufferTypes.h  ConcreteBufferManager.cpp  ConcreteBufferManager.h  ConcreteBufferTypes.cpp  ConcreteBufferTypes.h  MixedDataMap.cpp  MixedDataMap.h  MixedDataMapBase.cpp  MixedDataMapBase.h  MixedSliceMap.cpp  MixedSliceMap.h  MultiTypeMap.cpp  MultiTypeMap.h  VectorSlice.cpp  VectorSlice.h
src/math/: Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/opengl/: BufferTypes.h  Camera.cpp  Camera.h  Frustum.cpp  Frustum.h  RenderNode.cpp  RenderNode.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  World.cpp  World.h
src/opengl/data/: BufferTypes.cpp  BufferTypes.h  MixedDataMap.cpp  MixedDataMap.h  VectorSlice.cpp  VectorSlice.h
src/opengl/math/: Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/opengl/shaders/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
src/programs/: Empty.cpp  Empty.h  Scenario.cpp  Scenario.h
src/programs/tests/: Squares2D.cpp  Squares2D.h
src/rendering/: BasePureNode.cpp  BasePureNode.h  Camera.cpp  Camera.h  Frustum.cpp  Frustum.h  LeafNode.cpp  LeafNode.h  OpenglWrapper.cpp  OpenglWrapper.h  PureNode.cpp  PureNode.h  RenderNode.cpp  RenderNode.h  RenderingTree.cpp  RenderingTree.h  RootNode.cpp  RootNode.h  TypedRenderNode.cpp  TypedRenderNode.h  World.cpp  World.h
src/rendering/shaders/: BaseUniformManager.cpp  BaseUniformManager.h  InterfaceVariable.cpp  InterfaceVariable.h  InterfaceVariableBase.cpp  InterfaceVariableBase.h  Pack.h  RawShader.cpp  RawShader.h  Shader.cpp  Shader.h  ShaderBase.cpp  ShaderBase.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramBase.cpp  ShaderProgramBase.h  UniformManager.cpp  UniformManager.h  UniformVariable.cpp  UniformVariable.h  UniformVariableBase.cpp  UniformVariableBase.h  VariableFactory.cpp  VariableFactory.h
src/rendering/shaders/language/: Expression.cpp  Expression.h  GLSLGeneratorBase.cpp  GLSLGeneratorBase.h  IndentedStringStream.cpp  IndentedStringStream.h  Types.cpp  Types.h  Variable.cpp  Variable.h
src/rendering/shaders/programs/: BasicShader.cpp  BasicShader.h
src/scenarios/: Empty.cpp  Empty.h  Scenario.cpp  Scenario.h
src/scenarios/tests/: IndexBuffers.cpp  IndexBuffers.h  PhongLighting.cpp  PhongLighting.h  Squares2D.cpp  Squares2D.h
src/shapes/: Cube.cpp  Cube.h  Sphere.cpp  Sphere.h
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MyQtWidget.cpp  MyQtWidget.h  MyQtWidget.ui
src/util/: MultiReferenceWrapper.h
